hphp/hack/test/typecheck/splat/error_req.php
<?hh

function f(mixed $i, int $j): void {}

function g((float, float) $t): void {
  f(...$t); // float <: #2 </: int
}
